apps/home/filaman/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filaman
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`filaman.orleans.io`)
      kind: Rule
      services:
        - name: filaman
          port: 8000
  tls:
    secretName: wildcard-orleans-io
---
apiVersion: v1
kind: Service
metadata:
  name: filaman
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8000
      targetPort: http
